# colored_logging

./: README.md  pyproject.toml
colored_logging/: __init__.py  colored_logging.py
